[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "binheap"
version = "0.0.1"
authors = [
  { name="Vivek Shrikhande", email="vivekshrikhande444@gmail.com" },
]
description = "An object oriented wrapper around heapq. Also, has MaxHeap out of the box."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/vivek-shrikhande/binheap"

[tool.pytest.ini_options]
pythonpath = [
    'src'
]
